src/unit_tests/CustCodeGeneration/fail/dispatch-void.cl
class Main {
    a : A;
    main() : Int { a.fun() };
};

class A {
    fun() : Int {1};
};